confirm deletion modal window added

--- a/src/app/components/tour-edit/tour-edit.component.html
+++ b/src/app/components/tour-edit/tour-edit.component.html
@@ -156,7 +156,7 @@
     </div>
     <div class="row justify-content-center">
       <div class="col-4 mt-4 mb-4">
-        <button class="btn btn-danger btn-block" (click)="deleteTour()">Fahrt Löschen</button>
+        <button class="btn btn-danger btn-block" (click)="openConfirmDeletion()">Fahrt Löschen</button>
       </div>
       <div class="col-4 mt-4 mb-4">
         <button class="btn btn-block" style="background-color: lightgrey" (click)="fillFields(); calculateEndTime()">Änderungen verwerfen</button>
