--- a/src/app/components/carlist/car-item/car-item.component.html
+++ b/src/app/components/carlist/car-item/car-item.component.html
@@ -5,7 +5,7 @@
   <div class="card-body" *ngIf="car">
     <div class="row">
       <div class="form-group col-md-12">
-
+        <a>Fahrzeug-Model</a>
         <input #FahrzeugModel
                type="text"
                class="form-control "
@@ -18,7 +18,7 @@
     </div>
     <div class="row">
       <div class="form-group col-md-12">
-
+        <a>Kennzeichen</a>
         <input #kennzeichen
                type="text"
                class="form-control "
@@ -31,7 +31,7 @@
     </div>
     <div class="row">
       <div class="form-group col-md-12">
-
+        <a>Sitzplätze</a>
         <input #sitzplatze
                type="number"
                class="form-control "
@@ -44,7 +44,7 @@
     </div>
     <div class="row">
       <div class="form-group col-md-12">
-
+        <a>Stauraum</a>
         <input #stauraum
                type="number"
                class="form-control "
