added dropdown in table and improved routing

--- a/src/app/components/tour-list-generic/tour-list-generic.component.html
+++ b/src/app/components/tour-list-generic/tour-list-generic.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div class="container mt-4" *ngIf="userData.currUser; else notloggedin">
+<div class="container mt-4 generic-table" *ngIf="userData.currUser; else notloggedin">
 
   <div class="row">
     <div class="col-3 ml-auto mb-2">
