--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -61,18 +61,23 @@
       <td>{{tour.storage}}</td>
       <td>{{tour.seats}}</td>
       <td>{{tour.price}}</td>
-      <td>
+      <td class="overflow-hidden">
 
-        <button class="btn btn-outline-dark btn-sm mx-auto green" (click)="navigateToDetailsOrEdit(tour)">
-          <a *ngIf="userService.currUser.uid === tour.creatorID">Bearbeiten</a>
-          <a *ngIf="userService.currUser.uid !== tour.creatorID">Details</a>
-        </button>
+        <div ngbDropdown container="body" placement="bottom-left">
+          <button class="btn btn-sm" ngbDropdownToggle>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="4" viewBox="0 0 16 4">
+              <path id="ic_more_horiz_24px" d="M6,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,6,10Zm12,0a2,2,0,1,0,2,2A2.006,2.006,0,0,0,18,10Zm-6,0a2,2,0,1,0,2,2A2.006,2.006,0,0,0,12,10Z" transform="translate(-4 -10)"/>
+            </svg>
 
-        <button *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
-                class="btn btn-outline-warning btn-sm mx-auto mt-2 evaluation"
-                (click)="openEvaluation(tour)">
-          <a>Bewerten</a>
-        </button>
+          </button>
+          <div ngbDropdownMenu class="dropdown-menu">
+            <button ngbDropdownItem (click)="navigateToDetails(tour)">Details</button>
+            <button ngbDropdownItem (click)="navigateToEdit(tour)">Bearbeiten</button>
+            <button ngbDropdownItem
+                    *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
+                    (click)="openEvaluation(tour)">Bewerten</button>
+          </div>
+        </div>
 
       </td>
     </tr>
