--- a/src/app/components/tour-table/tour-table.component.css
+++ b/src/app/components/tour-table/tour-table.component.css
@@ -40,3 +40,13 @@ button {
 background-color: #F3FBED;
 }
 
+.hovertable:hover {
+  cursor: pointer;
+  background-color: #F3FBED;
+}
+
+.dropdown-toggle:hover {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+
+
