autoscorll works, needs fixing

--- a/src/app/components/main-page/suchleiste/suchleiste.component.html
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.html
@@ -67,10 +67,11 @@
             </select>
           </div>
           <div class="col colpad">
-            <button type="button" class="btn  btn-block suchbutton" placeholder="" (click)="searchButton()"><span class="h6">Suchen</span></button>
+            <button type="button" class="btn  btn-block suchbutton" placeholder="" (click)="searchButton(); scroll(target)"><span class="h6">Suchen</span></button>
           </div>
         </div>
       </form>
+
 
 
 
@@ -151,11 +152,12 @@
           </div>
           </div>
           <div class="col colpad">
-            <button type="button" class="btn  btn-block suchbutton" (click)="searchButton()"><span class="h5">Suchen</span></button>
+            <button type="button" class="btn  btn-block suchbutton" (click)="searchButton(); scroll(target)"><span class="h5">Suchen</span></button>
           </div>
         </div>
       </form>
     </div>
   <div style="height: 200px"></div>
-  <div #target></div>
+<!--  <div #target></div>-->
 </header>
+<div #target></div>
