--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -71,7 +71,7 @@
 
           </button>
           <div ngbDropdownMenu class="dropdown-menu" (click)="$event.stopPropagation();">
-            <button ngbDropdownItem (click)="navigateToEdit(tour)">Bearbeiten</button>
+            <button ngbDropdownItem (click)="navigateToEdit(tour)" *ngIf="isCreator(tour)">Bearbeiten</button>
             <button ngbDropdownItem (click)="openTourCode(tour)">Fahrt bestätigen</button>
             <button ngbDropdownItem
                     *ngIf="switchStatus(tour) === 2 && userIsPassenger(tour) && !isCreator(tour)"
