--- a/src/app/components/tour-list-generic/tour-list-generic.component.html
+++ b/src/app/components/tour-list-generic/tour-list-generic.component.html
@@ -1,12 +1,4 @@
-<div class="container title-background mw-100">
-  <div class="row ">
-    <div class="col text-center">
-      <div class="h2 logoGreenDark m-3">Generische Tabelle</div>
-    </div>
-  </div>
-</div>
-
-<div class="container mt-4 generic-table" *ngIf="userData.currUser; else notloggedin">
+<div class="container mt-5 generic-table" *ngIf="userData.currUser; else notloggedin">
 
   <div class="row">
     <div class="col-3 mr-auto mb-2">
@@ -46,7 +38,7 @@
         <select #selectedList class="custom-select" id="inputGroupSelect01" (change)="fillList(selectedList.value)">
           <option value="0" selected>Eigene Fahrten</option>
           <option value="1">Gebuchte Fahrten</option>
-          <option value="2">Bevorstehene Fahrten</option>
+          <option value="2">Bevorstehende Fahrten</option>
           <option value="3">Abgelaufene Fahrten</option>
         </select>
         <div class="input-group-prepend">
