--- a/src/app/components/tour-list-generic/tour-list-generic.component.html
+++ b/src/app/components/tour-list-generic/tour-list-generic.component.html
@@ -22,7 +22,7 @@
           <option value="2">Stauts</option>
           <option value="3">Von</option>
           <option value="4">Nach</option>
-          <option value="5">Wann</option>
+          <option value="5">Datum</option>
           <option value="6">Dauer</option>
           <option value="7">Stauraum</option>
           <option value="8">Sitze</option>
