--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -210,9 +210,15 @@
     </div>
   </div>
 
-  <div *ngIf="this.alreadyPassenger() || this.alreadyDriver() || this.afterModal" class="row justify-content-center">
+  <div *ngIf="(this.alreadyPassenger() || this.alreadyDriver() || this.afterModal) && !this.isCreator()" class="row justify-content-center">
     <div class="col-5 m-2">
       <button class="btn btn-danger btn-block" (click)="cancelTour()">Stornieren</button>
+    </div>
+  </div>
+
+  <div *ngIf="this.isCreator()" class="row justify-content-center">
+    <div class="col-5 m-2">
+      <button class="btn btn-outline-dark btn-block" (click)="navigateToEdit()">Bearbeiten</button>
     </div>
   </div>
 </div>
