--- a/src/app/components/alerts/alerts.component.html
+++ b/src/app/components/alerts/alerts.component.html
@@ -1,3 +1,3 @@
  <p *ngFor="let alert of alert.alerts">
-    <ngb-alert [type]="alert.type" (closed)="close(alert)">{{alert.message}} </ngb-alert>
+    <ngb-alert [type]="alert.type" class="text-center" (closed)="close(alert)">{{alert.message}}</ngb-alert>
   </p>
