--- a/src/app/components/tour-details/post-list/post-card/post-card.component.html
+++ b/src/app/components/tour-details/post-list/post-card/post-card.component.html
@@ -1,5 +1,5 @@
-<div class="second py-2 px-2"> <span class="text1">Type your note, and hit enter to add it</span>
+<div class="second py-2 px-2"> <span class="text1">{{post.message}}</span>
   <div class="d-flex justify-content-between py-1 pt-2">
-    <div><span class="text2">Curtis</span></div>
+    <div><span class="text2">{{post.author}}</span></div>
   </div>
 </div>
