--- a/src/app/components/tour-details/post-list/post-list.component.html
+++ b/src/app/components/tour-details/post-list/post-list.component.html
@@ -1,12 +1,8 @@
 <div class="container justify-content-center mt-5 border-left border-right mw-100 ">
-  <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="+ Kommentiere diese Tour" class="form-control addtxt"> </div>
-  <div class="d-flex justify-content-center py-2">
-    <app-post-card></app-post-card>
+  <div class="d-flex justify-content-center pt-3 pb-2">
+    <input type="text" name="text" placeholder="+ Kommentiere diese Tour" class="form-control addtxt">
   </div>
-  <div class="d-flex justify-content-center py-2">
-    <app-post-card></app-post-card>
-  </div>
-  <div class="d-flex justify-content-center py-2">
-    <app-post-card></app-post-card>
+  <div class="d-flex justify-content-center py-2" *ngFor="let post of posts">
+    <app-post-card [post]="post"></app-post-card>
   </div>
 </div>
