first attempt, base functionality is working

--- a/src/app/components/tour-details/post-list/post-list.component.css
+++ b/src/app/components/tour-details/post-list/post-list.component.css
@@ -11,7 +11,7 @@ body {
   padding-bottom: 10px;
   text-align: center;
   font-size: 13px;
-  width: 350px;
+  width: 100vw;
   background-color: #e5e8ed;
   font-weight: 500
 }
