--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -227,4 +227,5 @@
   </div>
 </div>
 
-<app-post-list></app-post-list>
+<app-post-list *ngIf="alreadyDriver() || alreadyPassenger()" [tour]="this.ultimateTour"></app-post-list>
+
