--- a/src/app/components/tour-details/post-list/post-list.component.css
+++ b/src/app/components/tour-details/post-list/post-list.component.css
@@ -9,7 +9,7 @@ body {
 .addtxt {
   padding-top: 10px;
   padding-bottom: 10px;
-  text-align: center;
+  text-align: left;
   font-size: 13px;
   width: 100vw;
   background-color: #e5e8ed;
@@ -33,44 +33,9 @@ body {
   color: #56575b
 }
 
-.text2 {
-  font-size: 13px;
-  font-weight: 500;
-  margin-left: 6px;
-  color: #56575b
-}
 
-.text3 {
-  font-size: 13px;
-  font-weight: 500;
-  margin-right: 4px;
-  color: #828386
-}
 
-.text3o {
-  color: #00a5f4
-}
 
-.text4 {
-  font-size: 13px;
-  font-weight: 500;
-  color: #828386
-}
 
-.text4i {
-  color: #00a5f4
-}
 
-.text4o {
-  color: white
-}
 
-.thumbup {
-  font-size: 13px;
-  font-weight: 500;
-  margin-right: 5px
-}
-
-.thumbupo {
-  color: #17a2b8
-}
