--- a/src/app/components/tour-details/post-list/post-list.component.html
+++ b/src/app/components/tour-details/post-list/post-list.component.html
@@ -1,8 +1,8 @@
 <div class="container rounded mt-4 shadow bg-white border-0 p-4 ">
-  <div id="communicationTitle" class="h4">Unterhaltung zu dieser Tour!</div>
+  <div id="communicationTitle" class="h3 logoGreenDark text-center">Unterhaltung zu dieser Tour!</div>
   <div class="d-flex justify-content-center pt-3 pb-2">
-    <textarea #message placeholder="+ Kommentiere diese Tour" class="form-control addtxt"></textarea>
-    <button (click)="addPost(message.value); message.value = ''" class="btn btn-success ml-1">Kommentieren</button>
+    <textarea #message placeholder="Unterhalte dich mit den Anderen!" class="form-control addtxt"></textarea>
+    <button (click)="addPost(message.value); message.value = ''" class="btn btn-dark ml-1">Abschicken</button>
   </div>
   <div class="d-flex justify-content-center py-2" *ngFor="let post of posts | async">
     <div *ngIf="userService.currUser?.uid === post.author" class="ml-auto">
