not registrated users are allowed to see open books on other users

--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -1,7 +1,7 @@
 <div class="table-responsive">
 
 
-  <table class="table p-4" *ngIf="userService.currUser">
+  <table class="table p-4">
     <thead class="thead-cargo">
     <tr>
       <th class="text-center">Art</th>
