autoscorll done, svgs in addmoney fixed

--- a/src/app/components/main-page/suchleiste/suchleiste.component.html
+++ b/src/app/components/main-page/suchleiste/suchleiste.component.html
@@ -67,7 +67,7 @@
             </select>
           </div>
           <div class="col colpad">
-            <button type="button" class="btn  btn-block suchbutton" placeholder="" (click)="searchButton(); scroll(target)"><span class="h6">Suchen</span></button>
+            <button type="button" class="btn  btn-block suchbutton" placeholder="" (click)="searchButton()"><span class="h6">Suchen</span></button>
           </div>
         </div>
       </form>
