--- a/src/app/components/tour-site/tour-site.component.html
+++ b/src/app/components/tour-site/tour-site.component.html
@@ -1,8 +1,8 @@
 <app-suchleiste (newSearchEvent)="resetSearch()"></app-suchleiste>
-
+<div #ergebnis></div>
 <app-slide-checker (changeState)="offerOnOff()"></app-slide-checker>
 
-<div class="container" #ergebnis>
+<div class="container">
   <div class="row">
     <div class="col-12" *ngIf="isOfferEmpty && isRequestEmpty && firstSearch">
       <div class="center mt-5">
