added creator in table, added filters in table, fixed past tour list, changed attribute in Tour.ts

--- a/src/app/components/profil/loggedin/update-user/update-user.component.html
+++ b/src/app/components/profil/loggedin/update-user/update-user.component.html
@@ -97,8 +97,7 @@
   <div class="container ">
     <div class="row justify-content-center">
       <div class="col-6 ">
-        <button type="button" class="btn btn-success mx-auto m-3 btn-block"
-                (click)="inputCheck()" (click)="updateUser()" (click)="activeModal.dismiss()">
+        <button type="button" class="btn btn-success mx-auto m-3 btn-block" (click)="inputCheck()">
           Speichern
         </button>
       </div>
