--- a/src/app/components/tour-list-generic/tour-list-generic.component.html
+++ b/src/app/components/tour-list-generic/tour-list-generic.component.html
@@ -19,6 +19,7 @@
           <option value="7">Stauraum</option>
           <option value="8">Sitze</option>
           <option value="9">Preis</option>
+          <option value="10">Ersteller</option>
         </select>
         <div class="d-flex align-items-center ml-2 btn-hover justify-content-center" (click)="reverseList()">
           <svg *ngIf="this.isReversed" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
@@ -40,6 +41,8 @@
           <option value="1">Gebuchte Fahrten</option>
           <option value="2">Bevorstehende Fahrten</option>
           <option value="3">Abgelaufene Fahrten</option>
+          <option value="4">Du Fährst</option>
+          <option value="5">Du wirst mitgenommen</option>
         </select>
         <div class="input-group-prepend">
           <label class="input-group-text" for="inputGroupSelect01">Filter</label>
