changed delete button in post-card.component.html

--- a/src/app/components/tour-details/post-list/post-card/post-card.component.css
+++ b/src/app/components/tour-details/post-list/post-card/post-card.component.css
@@ -9,3 +9,12 @@
   font-weight: 500;
   color: #56575b
 }
+
+.delete {
+  position: relative;
+  bottom: 5px;
+}
+
+.delete:hover {
+  cursor: pointer;
+}
