--- a/src/app/components/tour-details/post-list/post-card/post-card.component.html
+++ b/src/app/components/tour-details/post-list/post-card/post-card.component.html
@@ -1,7 +1,18 @@
 <div class=" card second py-2 px-2 shadow">
-  <span class="text1">
-    {{post.message}}
-  </span>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-10 text1 ml-0 pl-0">{{post.message}}</div>
+      <div class="col-2 pr-0 pt-0 m-0">
+        <div class="ml-xl-5 delete" style="float: right; border: transparent" *ngIf="userService.currUser?.uid === post.author">
+          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="18" viewBox="0 0 14 18" (click)="deletePost(post)">
+            <path id="ic_delete_24px" d="M6,19a2.006,2.006,0,0,0,2,2h8a2.006,2.006,0,0,0,2-2V7H6ZM19,4H15.5l-1-1h-5l-1,1H5V6H19Z" transform="translate(-5 -3)" fill="#dc3545"/>
+          </svg>
+
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="d-flex justify-content-between py-1 pt-2">
     <div class="mr-5">
@@ -12,8 +23,6 @@
         <path id="ic_account_circle_24px" d="M34.5,2A32.5,32.5,0,1,0,67,34.5,32.512,32.512,0,0,0,34.5,2Zm0,9.75a9.75,9.75,0,1,1-9.75,9.75A9.737,9.737,0,0,1,34.5,11.75Zm0,46.15A23.4,23.4,0,0,1,15,47.435c.1-6.468,13-10.01,19.5-10.01,6.467,0,19.4,3.542,19.5,10.01A23.4,23.4,0,0,1,34.5,57.9Z" transform="translate(-2 -2)" fill="#208479"/>
       </svg>
     </div>
-    <div class="ml-xl-5" style="float: right; border: transparent" *ngIf="userService.currUser?.uid === post.author">
-      <button class="btn btn-secondary btn-outline-danger" (click)="deletePost(post)">X</button>
-    </div>
+
   </div>
 </div>
