--- a/src/app/components/tour-details/post-list/post-list.component.html
+++ b/src/app/components/tour-details/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="container rounded mt-4 shadow bg-white border-0 p-4 ">
+<div class="container rounded mt-4 shadow bg-white border-0 p-4" style="margin-bottom: 20em">
   <div id="communicationTitle" class="h3 logoGreenDark text-center">Unterhaltung zu dieser Tour!</div>
   <div class="d-flex justify-content-center pt-3 pb-2">
     <textarea #message placeholder="Unterhalte dich mit den Anderen!" class="form-control addtxt"></textarea>
