--- a/src/app/components/tour-card/tour-card.component.html
+++ b/src/app/components/tour-card/tour-card.component.html
@@ -66,7 +66,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="2em" viewBox="0 0 35 33.25">
             <path id="ic_work_24px" d="M33.5,9h-7V5.5A3.488,3.488,0,0,0,23,2H16a3.488,3.488,0,0,0-3.5,3.5V9h-7a3.473,3.473,0,0,0-3.482,3.5L2,31.75a3.488,3.488,0,0,0,3.5,3.5h28a3.488,3.488,0,0,0,3.5-3.5V12.5A3.488,3.488,0,0,0,33.5,9ZM23,9H16V5.5h7Z" transform="translate(-2 -2)" fill="#208479"/>
           </svg>
-          <span class="logoGreenDark ml-1">{{this.freeStorage}}</span>
+          <span class="logoGreenDark ml-1">{{this.freeStorage}}m&#178;</span>
         </div>
 
         <div class="col text-center">
@@ -85,7 +85,7 @@
             <path id="ic_monetization_on_24px" d="M19.5,2A17.5,17.5,0,1,0,37,19.5,17.506,17.506,0,0,0,19.5,2Zm2.468,28.157V33.5H17.3V30.122c-2.993-.63-5.53-2.555-5.722-5.95H15c.175,1.838,1.435,3.273,4.637,3.273,3.43,0,4.2-1.715,4.2-2.782,0-1.453-.77-2.818-4.672-3.745-4.34-1.05-7.315-2.835-7.315-6.422,0-3.01,2.432-4.97,5.442-5.618V5.5h4.672V8.912a6.187,6.187,0,0,1,4.988,5.933h-3.43c-.088-1.943-1.12-3.273-3.885-3.273-2.625,0-4.2,1.19-4.2,2.87,0,1.47,1.138,2.432,4.673,3.342s7.315,2.433,7.315,6.842c-.018,3.2-2.415,4.953-5.46,5.53Z" transform="translate(-2 -2)" fill="#208479"/>
           </svg>
 
-          <span class="logoGreenDark ml-1">{{this.tour.price}}</span>
+          <span class="logoGreenDark ml-1">{{this.tour.price}}€</span>
         </div>
       </div>
     </div>
