--- a/src/app/components/tour-details/tour-details.component.html
+++ b/src/app/components/tour-details/tour-details.component.html
@@ -79,7 +79,7 @@
           </svg>
         </div>
         <div class="">
-          <span class="logoGreenDark ml-2">{{this.freeStorage}}</span>
+          <span class="logoGreenDark ml-2 h5">{{this.freeStorage}}m&#178;</span>
         </div>
       </div>
 
@@ -115,7 +115,7 @@
         </div>
 
         <div class="div">
-          <span class="logoGreenDark ml-2 h5">{{this.ultimateTour?.price}}€<small>*</small></span>
+          <span class="logoGreenDark ml-2 h5">{{this.ultimateTour?.price}}€*</span>
         </div>
       </div>
 
