fixed some bugs with updating user, adding cars and booking tours

--- a/src/app/components/tour-table/tour-table.component.html
+++ b/src/app/components/tour-table/tour-table.component.html
@@ -59,9 +59,9 @@
       <td>{{tour.date | date : 'dd. MMM YYYY'}}</td>
       <td>{{tour.startTime}}</td>
       <td>{{tour.duration}}h</td>
-      <td>{{tour.storage}}</td>
+      <td>{{tour.storage}}m&#178;</td>
       <td>{{tour.seats}}</td>
-      <td>{{tour.price}}</td>
+      <td>{{tour.price}}€</td>
       <td>{{tour.creator.username}}</td>
       <td class="overflow-hidden">
 
